--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
     -->
     <title>Azure Tarot</title>
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Satisfy|Josefin+Sans" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
