--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <title>Azure Tarot</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Satisfy|Josefin+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Satisfy|Josefin+Sans|Noto+Sans" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
